third_party/WebKit/WebCore/platform/graphics/gtk/MediaPlayerPrivateGStreamer.cpp
@@ -49,6 +49,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include <math.h>
 #include <wtf/gtk/GOwnPtr.h>
 
+#define SENTINEL (void*) 0
+
 using namespace std;
 
 namespace WebCore {
@@ -131,8 +133,8 @@ static float playbackPosition(GstElement* playbin)
     gint64 position;
     gst_query_parse_position(query, 0, &position);
 
-    // Position is available only if the pipeline is not in NULL or
-    // READY state.
+    // Position is available only if the pipeline is not in GST_STATE_NULL or
+    // GST_STATE_READY state.
     if (position !=  static_cast<gint64>(GST_CLOCK_TIME_NONE))
         ret = static_cast<float>(position) / static_cast<float>(GST_SECOND);
 
@@ -413,7 +415,7 @@ bool MediaPlayerPrivate::hasVideo() const
 {
     gint currentVideo = -1;
     if (m_playBin)
-        g_object_get(G_OBJECT(m_playBin), "current-video", &currentVideo, NULL);
+        g_object_get(m_playBin, "current-video", &currentVideo, SENTINEL);
     return currentVideo > -1;
 }
 
@@ -421,7 +423,7 @@ bool MediaPlayerPrivate::hasAudio() const
 {
     gint currentAudio = -1;
     if (m_playBin)
-        g_object_get(G_OBJECT(m_playBin), "current-audio", &currentAudio, NULL);
+        g_object_get(m_playBin, "current-audio", &currentAudio, SENTINEL);
     return currentAudio > -1;
 }
 
@@ -430,7 +432,7 @@ void MediaPlayerPrivate::setVolume(float volume)
     if (!m_playBin)
         return;
 
-    g_object_set(G_OBJECT(m_playBin), "volume", static_cast<double>(volume), NULL);
+    g_object_set(m_playBin, "volume", static_cast<double>(volume), SENTINEL);
 }
 
 void MediaPlayerPrivate::volumeChanged()
@@ -488,7 +490,7 @@ void MediaPlayerPrivate::setRate(float rate)
                           GST_SEEK_TYPE_SET, end))
         LOG_VERBOSE(Media, "Set rate to %f failed", rate);
     else
-        g_object_set(m_playBin, "mute", mute, NULL);
+        g_object_set(m_playBin, "mute", mute, SENTINEL);
 }
 
 int MediaPlayerPrivate::dataRate() const
@@ -551,7 +553,7 @@ unsigned MediaPlayerPrivate::bytesLoaded() const
     if (!dur)
         return 0;*/
 
-    return 1;//totalBytes() * maxTime / dur;
+    return 1; // totalBytes() * maxTime / dur;
 }
 
 bool MediaPlayerPrivate::totalBytesKnown() const
@@ -635,7 +637,7 @@ void MediaPlayerPrivate::updateStates()
 
         m_networkState = MediaPlayer::Loaded;
 
-        g_object_get(m_playBin, "source", &m_source, NULL);
+        g_object_get(m_playBin, "source", &m_source, SENTINEL);
         if (!m_source)
             LOG_VERBOSE(Media, "m_source is 0");
         break;
@@ -926,10 +928,9 @@ void MediaPlayerPrivate::createGSTPlayBin(String url)
     g_signal_connect(bus, "message", G_CALLBACK(mediaPlayerPrivateMessageCallback), this);
     gst_object_unref(bus);
 
-    g_object_set(G_OBJECT(m_playBin), "uri", url.utf8().data(),
-                 NULL);
+    g_object_set(m_playBin, "uri", url.utf8().data(), SENTINEL);
 
-    g_signal_connect(G_OBJECT(m_playBin), "notify::volume", G_CALLBACK(mediaPlayerPrivateVolumeChangedCallback), this);
+    g_signal_connect(m_playBin, "notify::volume", G_CALLBACK(mediaPlayerPrivateVolumeChangedCallback), this);
 
     m_videoSink = webkit_video_sink_new();
 
@@ -939,16 +940,16 @@ void MediaPlayerPrivate::createGSTPlayBin(String url)
     if (channel->state == WTFLogChannelOn) {
         m_fpsSink = gst_element_factory_make("fpsdisplaysink", "sink");
         if (g_object_class_find_property(G_OBJECT_GET_CLASS(m_fpsSink), "video-sink")) {
-            g_object_set(G_OBJECT(m_fpsSink), "video-sink", m_videoSink, NULL);
+            g_object_set(m_fpsSink, "video-sink", m_videoSink, SENTINEL);
             g_object_ref_sink(m_fpsSink);
-            g_object_set(m_playBin, "video-sink", m_fpsSink, NULL);
+            g_object_set(m_playBin, "video-sink", m_fpsSink, SENTINEL);
         } else {
             m_fpsSink = 0;
-            g_object_set(m_playBin, "video-sink", m_videoSink, NULL);
+            g_object_set(m_playBin, "video-sink", m_videoSink, SENTINEL);
             LOG(Media, "Can't display FPS statistics, you need gst-plugins-bad >= 0.10.18");
         }
     } else
-        g_object_set(m_playBin, "video-sink", m_videoSink, NULL);
+        g_object_set(m_playBin, "video-sink", m_videoSink, SENTINEL);
 
     g_signal_connect(m_videoSink, "repaint-requested", G_CALLBACK(mediaPlayerPrivateRepaintCallback), this);
 }
